@@ -14,6 +14,7 @@ include(${CMAKE_CURRENT_LIST_DIR}/MFEMConfigVersion.cmake)
 set(MFEM_VERSION ${PACKAGE_VERSION})
 
 set(MFEM_USE_MPI @MFEM_USE_MPI@)
+set(MFEM_NO_METIS @MFEM_NO_METIS@)
 set(MFEM_USE_METIS_5 @MFEM_USE_METIS_5@)
 set(MFEM_DEBUG @MFEM_DEBUG@)
 set(MFEM_USE_GZSTREAM @MFEM_USE_GZSTREAM@)
