@@ -11,6 +11,8 @@
 Development version 3.3.1, not released
 =======================================
 
+- Added an option for building in parallel without METIS dependency.
+
 - Added SUNDIALS version of example 16/16p.
 
 - Added optional support for the STRUMPACK parallel sparse direct solver and
